--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Game/.idea/.idea.Game/riderModule.iml
 Game/.idea/.idea.Game/.idea/vcs.xml
 Game/.idea/.idea.Game/.idea/misc.xml
 Game/.idea/.idea.Game/.idea/indexLayout.xml
+/Game/obj/Debug
